versions/v0.30.1/content/reference/profile/options.md
---
title: options
weight: 21
---
#### Section profile.**options**

This section configures restic command `options`  available since `0.18.0` .
Information on command and flags is copied from the [restic](https://github.com/restic/restic) manual pages.

The "options" command prints a list of extended options.

##### Flags used by **resticprofile** only:

| Name              | Type                    | Default  | Notes |
|:------------------|:------------------------|:---------|:------|
| **run-after** |one or more `strings` | |Run shell command(s) after a successful restic command |
| **run-after-fail** |one or more `strings` | |Run shell command(s) after failed restic or shell commands |
| **run-before** |one or more `strings` | |Run shell command(s) before a restic command |
| **run-finally** |one or more `strings` | |Run shell command(s) always, after all other commands |





{{% notice style="tip" %}}
Flags declared for the **restic** command line in section *[profile](../profile)*
can be overridden in this section.
{{% /notice %}}


{{< pageversions "v0.31.0" "v0.32.0" >}}
